css/styles.css
html, body {
  margin: 0;
  height: 100vh;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

#choropleth {
  width: 1000px;
  background-color: yellow;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

#map {
  position: relative;
  width: auto;
  height: auto;
}

#map-canvas {
  background-color: pink;
}

#map-canvas-inset {
  position: absolute;
  top: 0;
  left: 0;
}

#year {
  display: inline-block;
}

.tick {
  stroke: black;
}

